--- a/src/TaskFlow.Api/TaskFlow.Api.csproj
+++ b/src/TaskFlow.Api/TaskFlow.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\TaskFlow.Data\TaskFlow.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
