--- a/src/TaskFlow.Api/appsettings.Development.json
+++ b/src/TaskFlow.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TaskFlow": "Server=localhost;Database=taskflowdb;Uid=root;Pwd=Lu1zv4n3554;"
   }
 }
