--- a/src/TaskFlow.Comunication/TaskFlow.Comunication.csproj
+++ b/src/TaskFlow.Comunication/TaskFlow.Comunication.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskFlow.Data\TaskFlow.Data.csproj" />
+  </ItemGroup>
+
 </Project>
